--- a/test/index.html
+++ b/test/index.html
@@ -128,6 +128,24 @@
 
             </div>
         </section>
+
+        <section class="fifth-index-all">
+            <div class="fifth-index-stand">
+                <div class="fifth-index-name">
+                    <div class="fin-name">Мы В Сетях</div>
+                    <div class="fin-content">
+                        <a class="fin-block block-1" href=""></a>
+                        <a class="fin-block block-2" href=""></a>
+                        <a class="fin-block block-3" href=""></a>
+                    </div>
+                </div>
+                <div class="fifth-index-image">
+                    <img class="fifth-image-img" src="images/Index-IMG/Main/homyak-fifth-img.png">
+                    <div class="fifth-image-circle-1"></div>
+                    <div class="fifth-image-circle-2"></div>
+                </div>
+            </div>
+        </section>
        
 
         <section class="third-index-all">
@@ -154,9 +172,6 @@
             </div>
         </section>
         <script src="js/number.js"></script>
-        
-
-        <section class=""></section>
 
 
         <section class="fourth-index-all">
