--- a/test/index.html
+++ b/test/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="css/index-styles.css" type="text/css">
-    <link rel="shortcut icon" href="images/Favicon/favicon-v.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Favicon/favicon.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Vector</title>
+    <title>VecTor</title>
 </head>
 <body>
     <header class="header-top">
         <div class="header">
-            <div class="logo"><sp style="color: #0026ff;">V</sp>ector</div>
+            <div class="logo"><sp style="color: #0026ff;">V</sp>ecTor</div>
             <nav class="menu-pc">
                 <div class="block-1">
-                    <a class="dropbtn" href="#">Главная</a>
+                    <a class="dropbtn" href="index.html">Главная</a>
                 </div>
                 <div class="block-2">
-                    <a  class="dropbtn">Статьи</a>
+                    <a  class="dropbtn" href="base.html">Статьи</a>
                     <div class="dropdown-content">
                       <a href="#">Популярные</a>
                       <a href="#">Программирование</a>
@@ -46,7 +46,7 @@
                     <a class="menu-close" href="#"></a>
                     <ul>
                         <li><a href="index.html">Главная</a></li>
-                        <li><a href="#">Статьи</a></li>		
+                        <li><a href="base.html">Статьи</a></li>		
                         <li><a href="#it">Проекты</a></li>
                         <li><a href="#toph">О нас</a></li>
                     </ul>						
